fix swipe and z-index for mobile sidebar

--- a/src/widgets/sidebar/ui/MobileMenuSidebar/MobileMenuSidebar.module.scss
+++ b/src/widgets/sidebar/ui/MobileMenuSidebar/MobileMenuSidebar.module.scss
@@ -4,6 +4,7 @@
     height: calc(100vh - var(--header-height) - 20px);
     opacity: 0;
     transform: translateX(-100%);
+    z-index: 1;
 
     transition: all 1s ease-in-out;
 }
